--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "24Reddit Notícias",
+    "name": "24H Notícias",
     "slug": "trade-ts",
     "scheme": "trade-ts",
     "version": "1.0.0",
