--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-fbsdk-next": "^11.1.0",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
