--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "trade-ts",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,8 +19,9 @@
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
+    "expo-dev-client": "~2.0.1",
     "expo-linking": "^3.3.0",
-    "expo-splash-screen": "^0.17.5",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "isomorphic-ws": "^5.0.0",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
   },
