--- a/app.json
+++ b/app.json
@@ -12,7 +12,6 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "runtimeVersion": "1.0.0",
     "updates": {
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/a89661ee-2d7b-4ded-b129-07f3d281d7a3"
@@ -44,7 +43,10 @@
           "appID": "950610639454869",
           "clientToken": "ac20d3906319e57eee63f4d3738d20f2",
           "displayName": "24H Notícias",
-          "scheme": "fb950610639454869"
+          "scheme": "fb950610639454869",
+          "advertiserIDCollectionEnabled": false,
+          "autoLogAppEventsEnabled": false,
+          "isAutoInitEnabled": true
         }
       ]
     ]
