--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
+    "expo-dev-client": "~2.0.1",
     "expo-linking": "^3.3.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
