--- a/app.json
+++ b/app.json
@@ -44,7 +44,10 @@
           "appID": "950610639454869",
           "clientToken": "ac20d3906319e57eee63f4d3738d20f2",
           "displayName": "24H Notícias",
-          "scheme": "fb950610639454869"
+          "scheme": "fb950610639454869",
+          "advertiserIDCollectionEnabled": false,
+          "autoLogAppEventsEnabled": true,
+          "isAutoInitEnabled": true
         }
       ]
     ]
