--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
           "clientToken": "ac20d3906319e57eee63f4d3738d20f2",
           "displayName": "24H Notícias",
           "scheme": "fb950610639454869",
-          "advertiserIDCollectionEnabled": false,
+          "advertiserIDCollectionEnabled": true,
           "autoLogAppEventsEnabled": true,
           "isAutoInitEnabled": true
         }
